--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,56 @@
-cachetools==3.1.1
-certifi==2019.9.11
+aiohttp==3.6.2
+aiohttp-jinja2==1.2.0
+aiomqtt==0.1.1
+async-timeout==3.0.1
+attrs==19.3.0
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.0
 chardet==3.0.4
-google-api-python-client==1.7.11
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.1
-httplib2==0.14.0
-idna==2.8
+cryptography==3.0
+docopt==0.6.2
+google-api-core==1.21.0
+google-api-python-client==1.10.0
+google-auth==1.19.2
+google-auth-httplib2==0.0.4
+googleapis-common-protos==1.52.0
+hbmqtt==0.8
+httplib2==0.18.1
+idna==2.10
+ifaddr==0.1.7
 iso-639==0.4.5
-iso3166==1.0
+iso3166==1.0.1
 isodate==0.6.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+multidict==4.7.6
 oauth2client==4.1.3
-oauthlib==3.1.0
-pyasn1==0.4.7
-pyasn1-modules==0.2.7
-pycryptodome==3.9.0
-PyDrive==1.3.1
+paho-mqtt==1.5.0
+passlib==1.7.2
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pycryptodome==3.9.8
+PyDrive2==1.4.14
+pyOpenSSL==19.1.0
 PySocks==1.7.1
+python-engineio==3.13.1
+python-socketio==4.6.0
 python-twitch-client==0.6.0
-PyYAML==5.1.2
-requests==2.22.0
-requests-oauthlib==1.2.0
-rsa==4.0
-six==1.12.0
-streamlink==1.3.1
-uritemplate==3.0.0
-urllib3==1.25.6
-websocket-client==0.56.0
+pytz==2020.1
+PyYAML==5.3.1
+requests==2.24.0
+rsa==4.6
+six==1.15.0
+steamlink==0.9.2
+streamlink==1.5.0
+tinydb==4.1.1
+tinydb-smartcache==1.0.2
+transitions==0.2.5
+uritemplate==3.0.1
+urllib3==1.25.9
+websocket-client==0.57.0
+websockets==8.1
+yarl==1.4.2
+zeroconf==0.28.0
